--- a/.github/workflows/bilibili.yaml
+++ b/.github/workflows/bilibili.yaml
@@ -15,13 +15,8 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v2
 
-            - name: "Set up Python"
-              uses: actions/setup-python@v1
-              with:
-                python-version: 3.8
-
             - name: "安装依赖包"
-              run: pip install -r ./requirements.txt
+              run: pip3 install -r ./requirements.txt
 
             - name: "运行 哔哩哔哩签到"
               run: python3 function/bilibili/bilibili.py
