--- a/.github/workflows/iqiyi.yaml
+++ b/.github/workflows/iqiyi.yaml
@@ -8,7 +8,8 @@ on:
         types: [started]
 
 jobs:
-    build:
+    # TODO :build 爱奇艺会员签到待完成
+    build_todo:
         runs-on: ubuntu-latest
         if: github.event.repository.owner.id == github.event.sender.id
         steps:
@@ -22,7 +23,7 @@ jobs:
                   npm install
             - name: "运行【爱奇艺会员签到】"
               run: |
-                  node function/iQIYI-DailyBonus/iqiyi.js
+                  node function/iQIYI-DailyBonus/iQIYI-bak.js
               env:
                   iQIYI_COOKIE: ${{ secrets.iQIYI_COOKIE }}
                   SEND_KEY: ${{ secrets.SEND_KEY }}
