--- a/.github/workflows/v2ex.yaml
+++ b/.github/workflows/v2ex.yaml
@@ -8,7 +8,8 @@ on:
         types: [started]
 
 jobs:
-    build:
+    #TODO V2ex 待完成
+    build_todo:
         runs-on: ubuntu-latest
         if: github.event.repository.owner.id == github.event.sender.id
         steps:
