--- a/.github/workflows/zdforum.yaml
+++ b/.github/workflows/zdforum.yaml
@@ -1,15 +1,14 @@
-name: 中国电信签到
+name: 终点论坛签到
 
 on:
     workflow_dispatch:
     schedule:
-        - cron: "0 */8 * * *"
-#电信经常签到不成功所以让他每八小时执行一下,一天三次
+        - cron: "0 14 * * *"
     watch:
         types: [started]
 
 jobs:
-    build:
+    build1:
         runs-on: ubuntu-latest
         if: github.event.repository.owner.id == github.event.sender.id
         steps:
@@ -21,18 +20,19 @@ jobs:
             - name: npm install
               run: |
                   npm install
-            - name: "运行【中国电信签到】"
+            - name: "运行【终点论坛自动签到】"
               run: |
-                  node function/10000/10000.js
+                  node function/zd-forum/zd-forum.js
               env:
-                  TELECOM_MOBILE: ${{ secrets.TELECOM_MOBILE }}
+                  ZD_USER: ${{ secrets.ZD_USER }}
+                  ZD_PASS: ${{ secrets.ZD_PASS}}
                   SEND_KEY: ${{ secrets.SEND_KEY }}
                   PUSH_KEY: ${{ secrets.PUSH_KEY }}
                   BARK_PUSH: ${{ secrets.BARK_PUSH }}
                   PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN}}
                   PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER}}
-                  QYWX_AM: ${{ secrets.QYWX_AM}}
                   QYWX_KEY: ${{ secrets.QYWX_KEY}}
+                  QYWX_AM: ${{ secrets.QYWX_AM}}
                   TG_PROXY_HOST: ${{ secrets.TG_PROXY_HOST}}
                   TG_PROXY_PORT: ${{ secrets.TG_PROXY_PORT}}
                   IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY}}
