--- a/.github/workflows/bilibili.yaml
+++ b/.github/workflows/bilibili.yaml
@@ -1,9 +1,9 @@
-name: 哔哩哔哩签到
+name: bilibili
 
 on:
     workflow_dispatch:
     schedule:
-        - cron: "5 16 * * *"
+        - cron: 10 16 * * *
     watch:
         types: [started]
 
