--- a/.github/workflows/zdforum.yaml
+++ b/.github/workflows/zdforum.yaml
@@ -1,9 +1,9 @@
-name: 终点论坛签到
+name: zdforum
 
 on:
     workflow_dispatch:
     schedule:
-        - cron: "0 14 * * *"
+        - cron: 20 16 * * *
     watch:
         types: [started]
 
@@ -13,10 +13,10 @@ jobs:
         if: github.event.repository.owner.id == github.event.sender.id
         steps:
             - uses: actions/checkout@v1
-            - name: Use Node.js 10.x
+            - name: Use Node.js 11.x
               uses: actions/setup-node@v1
               with:
-                  node-version: 10.x
+                  node-version: 11.x
             - name: npm install
               run: |
                   npm install
