--- a/.github/workflows/zdforum.yaml
+++ b/.github/workflows/zdforum.yaml
@@ -12,9 +12,9 @@ jobs:
         runs-on: ubuntu-latest
         if: github.event.repository.owner.id == github.event.sender.id
         steps:
-            - uses: actions/checkout@v1
+            - uses: actions/checkout@v4
             - name: Use Node.js 11.x
-              uses: actions/setup-node@v1
+              uses: actions/setup-node@v
               with:
                   node-version: 11.x
             - name: npm install
