--- a/.github/workflows/zdforum.yaml
+++ b/.github/workflows/zdforum.yaml
@@ -14,7 +14,7 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - name: Use Node.js 11.x
-              uses: actions/setup-node@v
+              uses: actions/setup-node@v3
               with:
                   node-version: 11.x
             - name: npm install
